fix desktop style overflow-x

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -15,11 +15,12 @@ html{
 body{
     min-height: 100%;
     background-color: $darkBlue;
+    max-width: 100vw;
 
     @include desktop{
         display: grid;
         grid-template-rows: 100%;
-        grid-template-columns: fit-content(0) auto;
+        grid-template-columns:  fit-content(0) auto;
         grid-template-areas: 
         "header main";
     }
@@ -27,6 +28,17 @@ body{
 
 header{
     background-color: $semiDarkBlue;
+
+    @include desktop{
+        grid-area: header;
+    }
+}
+
+main{
+    @include desktop{
+        grid-area: main;
+        overflow-x: hidden;
+    }
 }
 
 a{
