--- a/src/ui/trending/trending.module.scss
+++ b/src/ui/trending/trending.module.scss
@@ -58,5 +58,10 @@
         max-width: 15rem;
         max-height: 8.75rem;
         border-radius: 0.5rem;
+
+        @include tablet{
+            max-width: 29.375rem;
+            max-height: 14.375rem;
+        }
     }
 }
